2007-05-01  Andreas Kupries <andreask@activestate.com>

	* examples/tie/metakit.tcl (get): Updated to use {*} instead of
	  the deprecated {expand}. [Bug 1710639].

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tie.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tie_growfile.test: Marked the 8 permission dependent tests as
	* tie_file.test: ... 'notRoot' as they cannot fail when the
	  superuser executes the testsuite.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* tie.man: Bumped version to 1.1
	* tie.tcl:
	* tie_file.tcl: Bumped version to 1.0.2
	* pkgIndex.tcl:

2006-09-19  Andreas Kupries <andreask@activestate.com>

	* tie_file.tcl: Invokations of the builtin 'file' changed to
	  '::file' to ensure use of the builtin. In snit v2 this resolves
	  to the class itself apparently, choking the construction of an
	  instance. [Tcllib SF Bug 1560851].

2006-03-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tie_growfile.test: Created a new standard data source, the
	* tie_growfile.tcl:  ever-growing file, for never-shrinking
	* pkgIndex.tcl:      arrays. Updated package index, documentation,
	* tie.man:           extended the testsuite.
	* tie.tcl:

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tie_file.test: ...... Fixed creation and cleanup of temp. files
	* tie_rarray_comm.test: by the testsuite.

2006-01-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tie.test: More boilerplate simplified via use of test support.
	* tie_array.test:
	* tie_file.test:
	* tie_log.test:
	* tie_rarray.test:
	* tie_rarray_comm.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
